--- a/src/components/ServiceUs.astro
+++ b/src/components/ServiceUs.astro
@@ -1,399 +1,129 @@
-<section class="servicio">
+---
+import Carrusel3D from "./Carrusel3d.astro";
+
+import ObrasEdificacion from "./ObrasEdificacion.astro";
+import ObrasCarretera from "./ObrasCarretera.astro";
+import ObrasAlcantarillado from "./ObrasAlcantarillado.astro";
+import EnsayoLaboratorio from "./EnsayoLaboratorio.astro";
+import SolucionesIEquiposP from "./SolucionesIEquiposP.astro";
+---
+
+<section class="servicio-section">
     <div class="servicio-header">
-        <h1 class="servicio-title">Nuestros Servicios</h1>
-        <p class="servicio-description">
-            En JAIL CONSTRUCTORA S.A.C, ofrecemos una
+        <h2 class="servicio-title">Nuestros Servicios</h2>
+        <p class="servicio-description-t">
+            En JAIL CONSTRUCTORA S.A.C, ofrecemos una amplia gama de servicios
+            para satisfacer las necesidades de nuestros clientes. Nos
+            especializamos en la construcción de obras de infraestructura, así
+            como en el mantenimiento y reparación de equipos pesados. Nuestro
+            equipo de profesionales altamente capacitados está comprometido en
+            brindar soluciones integrales y de calidad en cada uno de nuestros
+            proyectos.
         </p>
     </div>
     <section class="servicio-content">
         <article class="servicio-container-contratistas">
-            <h1>Contratista</h1>
-            <section class="servicio-obras-edificacion">
-                <div class="edificacion obrae-title">
-                    <div>
-                        <h3>Obras de Efificación</h3>
-                    </div>
+            <div class="contratista-container">
+                <div class="contratista-btn-title">
+                    <p>
+                        Contratista
+                    </p>
                 </div>
-                <div class="edificacion electricista">
-                    <div>
-                        <h3>Electricista</h3>
-                    </div>
-                </div>
-                <div class="edificacion topografia">
-                    <div>
-                        <h3>Topografía</h3>
-                    </div>
-                </div>
-                <div class="edificacion gasfiteria">
-                    <div>
-                        <h3>Gastifería</h3>
-                    </div>
-                </div>
-                <div class="edificacion delineante">
-                    <div>
-                        <h3>Delineante CAD</h3>
-                    </div>
-                </div>
-                <div class="edificacion arquitectura">
-                    <div>
-                        <h3>Arquitectura</h3>
-                    </div>
-                </div>
-                <div class="edificacion diseño">
-                    <div>
-                        <h3>Diseñador y decoración de Interiores</h3>
-                    </div>
-                </div>
-                <div class="edificacion tecnico">
-                    <div>
-                        <h3>Técnico de Impermeabilización</h3>
-                    </div>
-                </div>
-            </section>
+                <h2 class="servicio-contratista-title">
+                    Contratistas de Obras Civiles
+                </h2>
+                <p class="servicio-description">
+                    En <strong>JAIL CONSTRUCTORA S.A.C</strong>, contamos con un
+                    equipo de contratistas altamente calificados en cada área de
+                    ejecución, garantizando precisión técnica, cumplimiento de
+                    normativas y estándares de calidad en todos nuestros
+                    proyectos. Nuestros profesionales trabajan bajo un modelo
+                    integrado que combina experiencia en campo con innovación
+                    tecnológica.
+                </p>
+            </div>
 
-            <section class="servicio-obras-carretera">
-                <div class="carretera lev-topografico">
-                    <div>
-                        <h3>Levantamiento Topográfico</h3>
-                    </div>
-                </div>
-                <div class="carretera obrac-title">
-                    <div>
-                        <h3>Obras de carretera</h3>
-                    </div>
-                </div>
-                <div class="carretera seg-ocupacional">
-                    <div>
-                        <h3>Seguridad Ocupacional</h3>
-                    </div>
-                </div>
-                <div class="carretera areac-ambiental">
-                    <div>
-                        <h3>Área Ambiental</h3>
-                    </div>
-                </div>
-                <div class="carretera m-suelos">
-                    <div>
-                        <h3>Mecánica de Suelos</h3>
-                    </div>
-                </div>
-                <div class="carretera enfermeria">
-                    <div>
-                        <h3>Enfermería</h3>
-                    </div>
-                </div>
-            </section>
-
-            <section class="servicio-obras-agua-alcantarillado">
-                <div class="agua-alcantarillado obraa-title">
-                    <div>
-                        <h3>Obras de agua potable y alcantarillado</h3>
-                    </div>
-                </div>
-                <div class="agua-alcantarillado areaa-ambiental">
-                    <div>
-                        <h3>Área Ambiental</h3>
-                    </div>
-                </div>
-                <div class="agua-alcantarillado leva-topografico">
-                    <div>
-                        <h3>Levantamiento Topográfico</h3>
-                    </div>
-                </div>
-                <div class="agua-alcantarillado p-t-agua-residuales">
-                    <div>
-                        <h3>Planta de Tratamiento de Aguas Residuales</h3>
-                    </div>
-                </div>
-                <div class="agua-alcantarillado p-t-agua-potable">
-                    <div>
-                        <h3>Planta de Tratamiento de Agua Potable</h3>
-                    </div>
-                </div>
-            </section>
-
-            <section class="servicio-ensayo-laboratorio">
-                <div class="ensayo-laboratorio e-especiales">
-                    <div>
-                        <h3>Ensayos especiales (ASTM)</h3>
-                    </div>
-                </div>
-                <div class="ensayo-laboratorio e-rocas">
-                    <div>
-                        <h3>Ensayos en roca (AST-UNE-EN)</h3>
-                    </div>
-                </div>
-                <div class="ensayo-laboratorio e-l-title">
-                    <div>
-                        <h3>Laboratorio de ensayos</h3>
-                    </div>
-                </div>
-                <div class="ensayo-laboratorio e-agregados">
-                    <div>
-                        <h3>Ensayos de agregados (ASMT - MTC - NTP)</h3>
-                    </div>
-                </div>
-                <div class="ensayo-laboratorio e-suelos">
-                    <div>
-                        <h3>Ensayos de suelos (ASTM-MTC)</h3>
-                    </div>
-                </div>
-
-                <div class="ensayo-laboratorio e-campo-suelos">
-                    <div>
-                        <h3>Ensayos de campo en suelos</h3>
-                    </div>
-                </div>
-                <div class="ensayo-laboratorio e-concreto">
-                    <div>
-                        <h3>
-                            Ensayos de concreto fresco y endurecido (ASTM -MTC)
-                        </h3>
-                    </div>
-                </div>
-                <div class="ensayo-laboratorio e-quimicos">
-                    <div>
-                        <h3>Ensayos químicos (ASTM - MTC - NTP)</h3>
-                    </div>
-                </div>
-            </section>
-
-            <section class="servicio-soluciones-integrales">
-                <div class="soluciones-integrales s-i-title">
-                    <div>
-                        <h3>SOLUCIONES INTEGRALES PARA EQUIPOS PESADOS</h3>
-                    </div>
-                </div>
-                <div class="soluciones-integrales m-p-equipos-pesados">
-                    <div >
-                        <h3>
-                            Mantenimiento preventivo y correctivo de equipos
-                            pesados y vehiculos
-                        </h3>
-                    </div>
-                </div>
-                <div class="soluciones-integrales fabricacion-m-p">
-                    <div>
-                        <h3>Fabricación y mecanizado de piezas</h3>
-                    </div>
-                </div>
-
-                <div class="soluciones-integrales mov-tierras">
-                    <div>
-                        <h3>Movimiento de tierras</h3>
-                    </div>
-                </div>
-                <div class="soluciones-integrales metalmecanica">
-                    <div>
-                        <h3>Metalmecánica</h3>
-                    </div>
-                </div>
-
-                <div class="soluciones-integrales a-m-pesadas-v">
-                    <div>
-                        <h3>Alquiler de maquinaría pesada y vehículos</h3>
-                    </div>
-                </div>
-            </section>
+            <ObrasEdificacion />
+            <ObrasCarretera />
+            <ObrasAlcantarillado />
+            <EnsayoLaboratorio />
+            <SolucionesIEquiposP />
         </article>
+        <div class="">
+            <div class="">
+                <Carrusel3D />
+            </div>
+        </div>
     </section>
 </section>
 <style>
-    .servicio {
-        width: 100%;
-    }
     .servicio-header {
-        background-color: aquamarine;
+        position: relative;
+        background-image: url("../assets/banner-servicios.webp");
+        background-size: cover;
         width: 100%;
-        height: 50vh;
+        height: 60vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
+        padding: 20px 60px;
+        box-sizing: border-box;
+        color: white;
+        z-index: 0;
+        gap: 20px;
     }
+    .servicio-header::before {
+        content: "";
+        position: absolute;
+        inset: 0; /* top: 0; left: 0; right: 0; bottom: 0 */
+        background: rgba(0, 0, 0, 0.5); /* Opacidad del overlay */
+        z-index: -1;
+    }
+
+    .servicio-title {
+        margin: 0;
+        font-size: 60px;
+        text-shadow: 1px 1px 2px #000;
+    }.servicio-description-t {
+        margin: 0;
+        font-size: 20px;
+    }
+    .servicio-description {
+        margin: 0;
+        font-family:"Noto Sans", sans-serif;
+
+    }
+
+    .servicio-contratista-title {
+        margin: 0 0 20px 0;
+        font-size: 50px;
+        display: flex;
+        justify-content: center;
+    }
+
     .servicio-container-contratistas {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        gap: 20px;
     }
-
-    /*OBRA DE EDIFICACIONES */
-    .servicio-obras-edificacion {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(6, 1fr);
-        gap: 10px;
+    .contratista-btn-title{
+        display: flex;
+        justify-content: center;
     }
-    .edificacion {
-        background-color: lightseagreen;
+    .contratista-btn-title p{
+        font-size: 30px;
+        font-weight: bold;
+        background-color: rgb(33, 47, 77);
+        padding: 10px;
+        border-radius: 20px 0px;
+        color: white;
     }
-    .electricista {
-        grid-row: span 3 / span 3;
-    }
-    .topografia {
-        grid-row: span 2 / span 2;
-    }
-    .gasfiteria {
-        grid-row: span 2 / span 2;
-    }
-    .delineante {
-        grid-column-start: 2;
-        grid-row-start: 4;
-    }
-    .arquitectura {
-        grid-row: span 2 / span 2;
-        grid-column-start: 3;
-        grid-row-start: 3;
-    }
-    .diseño {
-        grid-row: span 3 / span 3;
-        grid-column-start: 1;
-        grid-row-start: 4;
-    }
-    .tecnico {
-        grid-column: span 2 / span 2;
-        grid-row: span 2 / span 2;
-        grid-column-start: 2;
-        grid-row-start: 5;
+    .contratista-container {
+        height: 40vh;
+        padding: 0 60px;
     }
 
     /**OBRAS DE CARRETERAS */
-    .servicio-obras-carretera {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        gap: 10px;
-    }
-    .carretera {
-        background-color: lightcoral;
-    }
-    .lev-topografico {
-        grid-column: span 3 / span 3;
-        grid-row: span 2 / span 2;
-    }
-    .obrac-title {
-        grid-column: span 2 / span 2;
-        grid-column-start: 4;
-    }
-    .seg-ocupacional {
-        grid-column: span 2 / span 2;
-        grid-row: span 2 / span 2;
-        grid-column-start: 2;
-        grid-row-start: 3;
-    }
-    .areac-ambiental {
-       grid-row: span 2 / span 2;
-        grid-column-start: 1;
-        grid-row-start: 3;
-    }
-    .m-suelos {
-        grid-row: span 3 / span 3;
-        grid-column-start: 4;
-        grid-row-start: 2;
-    }
-    .enfermeria {
-        grid-row: span 3/ span 3;
-        grid-column-start: 5;
-        grid-row-start: 2;
-    }
     /**OBRAS DE AGUA POTABLE Y ALCANTARILLADO */
-    .agua-alcantarillado {
-        background-color: lightblue;
-    }
-    .servicio-obras-agua-alcantarillado {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        gap: 10px;
-    }
-    .areaa-ambiental {
-        grid-column: span 2 / span 2;
-        grid-row: span 2 / span 2;
-    }
-    .leva-topografico {
-        grid-row: span 3 / span 3;
-        grid-row-start: 2;
-    }
-    .p-t-agua-residuales {  
-        grid-row: span 2 / span 2;
-        grid-column-start: 2;
-        grid-row-start: 3;
-    }
-    .p-t-agua-potable {
-        grid-row: span 2 / span 2;
-        grid-column-start: 3;
-        grid-row-start: 3;
-    }
-
     /**LABORATORIO DE ENSAYOS */
-    .servicio-ensayo-laboratorio {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(7, 1fr);
-        gap: 10px;
-    }
-    .ensayo-laboratorio {
-        background-color: lightgoldenrodyellow;
-    }
-    .e-especiales {
-        grid-row: span 2 / span 2;
-    }
-    .e-rocas {
-        grid-row: span 3 / span 3;
-    }
-    .e-agregados {
-        grid-row: span 3 / span 3;
-        grid-column-start: 1;
-        grid-row-start: 3;
-    }
-    .e-suelos {
-        grid-row: span 2 / span 2;
-        grid-column-start: 2;
-        grid-row-start: 4;
-    }
-    .e-campo-suelos {
-        grid-row: span 4 / span 4;
-        grid-column-start: 3;
-        grid-row-start: 2;
-    }
-    .e-concreto {
-        grid-row: span 2 / span 2;
-        grid-column: span 2 / span 2;
-        grid-row-start: 6;
-    }
-    .e-quimicos {
-        grid-row: span 2 / span 2;
-        grid-column-start: 3;
-        grid-row-start: 6;
-    }
     /**SOLUCIONES INTEGRALES PARA EQUIPOS PESADOS */
-    .servicio-soluciones-integrales {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-        gap: 10px;
-    }
-    .soluciones-integrales {
-        background-color: lightpink;
-    }
-    .m-p-equipos-pesados{
-        grid-row: span 3/ span 3;
-    }
-    .fabricacion-m-p {
-        grid-row: span 2 / span 2;
-    }
-    .mov-tierras{
-        grid-row: span 2 / span 2;
-    }
-    .metalmecanica{
-        grid-column: span 2 / span 2;
-        grid-row: span 2 / span 2;
-        grid-column-start: 1;
-        grid-row-start: 4;
-    }
-    .a-m-pesadas-v {
-        grid-row: span 3 / span 3;
-        grid-column-start: 3;
-        grid-row-start: 3;
-    }
 </style>
