--- a/src/components/ObrasCarretera.astro
+++ b/src/components/ObrasCarretera.astro
@@ -69,7 +69,7 @@ import enfermeria from "../assets/enfermeria.webp";
 <style>
     .servicio-obras-carretera {
         width: 100%;
-        background-color: #a7d4ec;
+        background-color: #083d63;
         padding-top: 3rem;
         padding-bottom: 3rem;
         height: 100vh;
@@ -79,8 +79,8 @@ import enfermeria from "../assets/enfermeria.webp";
     }
     .servicio-container {
         display: grid;
-        grid-template-columns: repeat(5, 240px);
-        grid-template-rows: repeat(4, 130px);
+        grid-template-columns: repeat(5, 270px);
+        grid-template-rows: repeat(4, 150px);
         gap: 10px;
     }
 
