--- a/src/components/ObrasEdificacion.astro
+++ b/src/components/ObrasEdificacion.astro
@@ -91,7 +91,7 @@ import imperbealiazacion from "../assets/impermeabilizacion.webp";
 <style>
     .servicio-obras-edificacion {
         width: 100%;
-        background-color: #d5e9f8;
+        background-color: #0b5181;
         padding-top: 3rem;
         padding-bottom: 3rem;
         height: 100vh;
@@ -101,9 +101,9 @@ import imperbealiazacion from "../assets/impermeabilizacion.webp";
     }
     .servicio-container {
         display: grid;
-        grid-template-columns: repeat(3, 400px);
+        grid-template-columns: repeat(3, 450px);
         grid-template-rows: repeat(7, 85px);
-        gap: 10px;
+        gap: 20px;
         justify-content: center;
     }
     .electricista {
