--- a/src/components/SolucionesIEquiposP.astro
+++ b/src/components/SolucionesIEquiposP.astro
@@ -74,7 +74,7 @@ import alquilermaquinaria from "../assets/alquilermaquinaria.webp";
 <style>
     .servicio-soluciones-integrales {
         width: 100%;
-        background-color: #b6deeb;
+        background-color: #0b5181;
         padding-top: 3rem;
         padding-bottom: 3rem;
         height: 100vh;
@@ -84,8 +84,8 @@ import alquilermaquinaria from "../assets/alquilermaquinaria.webp";
     }
     .servicio-container {
         display: grid;
-        grid-template-columns: repeat(3, 400px);
-        grid-template-rows: repeat(5, 130px);
+        grid-template-columns: repeat(3, 450px);
+        grid-template-rows: repeat(5, 140px);
         gap: 10px;
     }
     .m-p-equipos-pesados {
