--- a/src/components/EnsayoLaboratorio.astro
+++ b/src/components/EnsayoLaboratorio.astro
@@ -92,14 +92,14 @@ import ensayosquimicos from "../assets/ensayosquimicos.webp";
 <style>
     .servicio-container {
         display: grid;
-        grid-template-columns: repeat(3, 400px);
-        grid-template-rows: repeat(7, 90px);
+        grid-template-columns: repeat(3, 450px);
+        grid-template-rows: repeat(7, 95px);
         gap: 10px;
         justify-content: center;
     }
     .servicio-ensayo-laboratorio {
         width: 100%;
-        background-color: lightblue;
+        background-color: #083d63;
         padding-top: 3rem;
         padding-bottom: 3rem;
         height: 100vh;
