--- a/src/components/ObrasAlcantarillado.astro
+++ b/src/components/ObrasAlcantarillado.astro
@@ -58,7 +58,7 @@ import plantatraguapotable from "../assets/PlantaTratamientoAguasPotable.webp";
 <style>
     .servicio-obras-agua-alcantarillado {
         width: 100%;
-        background-color: #aacae6;
+        background-color: #0b5181;
         padding-top: 3rem;
         padding-bottom: 3rem;
         height: 100vh;
@@ -68,7 +68,7 @@ import plantatraguapotable from "../assets/PlantaTratamientoAguasPotable.webp";
     }
     .servicio-container {
         display: grid;
-        grid-template-columns: repeat(3, 400px);
+        grid-template-columns: repeat(3, 450px);
         grid-template-rows: repeat(4, 160px);
         gap: 10px;
     }
